# downloader

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md
.github/workflows/: release.yml
crates/bili/: Cargo.toml
crates/bili/src/: error.rs  facade.rs  lib.rs  models.rs  prelude.rs
crates/bili/src/breakpoint/: dep.rs  error.rs  mod.rs
crates/bili/src/impls/: downloader.rs  mod.rs  music.rs  season.rs  video.rs
crates/facade/: Cargo.toml  build.rs
crates/facade/src/: base.proto  lib.rs  music.proto
crates/facade/src/facade/: items.proto
crates/network-tools/: Cargo.toml
service/bili/: Cargo.toml
service/bili/src/: a.json  consts.rs  lib.rs  models.rs  prelude.rs
service/bili/src/utils/: mod.rs
service/bili/src/utils/breakpoint/: mod.rs
