[workspace]
members = ["crates/*", "bin/*", "service/*"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = { version = "1" }
futures-util = { version = "0.3.30" }