[workspace]
members = ["crates/*", "bin/*", "service/*"]
# unfinished
exclude = ["crates/facade"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.2", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = { version = "1" }
futures-util = { version = "0.3.30" }
futures = { version = "0.3.30" }
tokio-util = { version = "0.7.10" }
bytes = { version = "1.6.0" }
