[package]
name = "bili"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
futures-util.workspace = true

derive-getters = { version = "0.3.0" }

[dev-dependencies]
anyhow = { version = "1" }
